Temporarily re-enable a built-in DTB for mor1kx

--- a/arch/openrisc/configs/litex_defconfig
+++ b/arch/openrisc/configs/litex_defconfig
@@ -16,3 +16,4 @@ CONFIG_SERIAL_LITEUART=y
 CONFIG_SERIAL_LITEUART_CONSOLE=y
 CONFIG_SOFTLOCKUP_DETECTOR=y
 CONFIG_TTY_PRINTK=y
+CONFIG_OPENRISC_BUILTIN_DTB="mor1kx"
